Update finalEdge text to 'Play Time'

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="overlay" id="deathOverlay" style="display: none;">
         <h1 id="deathScreenTitle">You Got Caught!</h1>
         <p id="finalScore">Score: </p>
-        <p id="finalEdge">Edge: </p>
+        <p id="finalEdge">PLay Time: </p>
         <button id="playAgain">Play Again!</button>
     </div>
     <div class="overlay" id="pauseOverlay" style="display: none;">
