Allowed for control of all desktops

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         Edge: 0
     </div>
     <div id="computer_div">
-        <img class="computer_fake" src="images/computer_school.png" width="200px", height="200px">
-        <img class="computer_fake" src="images/computer_school.png" width="200px", height="200px">
-        <img id="computer" src="images/computer_minecraft.png" width="200px", height="200px">
-        <img class="computer_fake" src="images/computer_school.png" width="200px", height="200px">
-        <img class="computer_fake" src="images/computer_school.png" width="200px", height="200px">
+        <img id="computer1" class = "computer_fake" src="images/computer_school.png" width="200px", height="200px">
+        <img id="computer2" class = "computer_fake" src="images/computer_school.png" width="200px", height="200px">
+        <img id="computer3" class = "computer_fake" src="images/computer_school.png" width="200px", height="200px">
+        <img id="computer4" class = "computer_fake" src="images/computer_school.png" width="200px", height="200px">
+        <img id="computer5" class = "computer_fake" src="images/computer_school.png" width="200px", height="200px">
     </div>
     <div id="student_div">
-        <img class="student_fake"  width="200px", height="200px">
-        <img class="student_fake"  width="200px", height="200px">
-        <img id="student_player"  width="200px", height="200px">
-        <img class="student_fake" width="200px", height="200px">
-        <img class="student_fake"  width="200px", height="200px">
+        <img class="student_fake"  id = "student1" width="200px", height="200px">
+        <img class="student_fake"  id = "student2" width="200px", height="200px">
+        <img class="student_fake" id = "student3" id = "student_player"  width="200px", height="200px">
+        <img class="student_fake" id = "student4" width="200px", height="200px">
+        <img class="student_fake"  id = "student5" width="200px", height="200px">
     </div>
 
     <div id="desk"></div>
